--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-python-dotenv
-google-api-client-wrapper>=1.1.3
-langgraph
-langchain-core
-langchain-google-genai
-langchain
+python-dotenv~=1.1.1
+google-api-client-wrapper>=1.1.4
+langgraph~=0.6.8
+langchain-core~=0.3.78
+langchain-google-genai~=2.1.12
+langchain~=0.3.27
 textwrap3
-
+pydantic~=2.12.0
