--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,9 @@ langchain~=0.3.27
 textwrap3
 pydantic~=2.12.0
 python-telegram-bot>=21.0
+
+python-telegram-bot
+flask
+google-api-python-client~=2.163.0
+google-auth-httplib2
+google-auth-oauthlib~=1.2.1
