- Bot can send files via telegram instead of just downloading it. - User files gets saved in a folder for the user and get deleted during session cleanup

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,20 @@
-python-dotenv~=1.1.1
-google-api-client-wrapper>=2.0.0
-langgraph~=0.6.8
-langchain-core~=0.3.78
-langchain-google-genai~=2.1.12
-langchain~=0.3.27
+python-dotenv
+google-api-client-wrapper
+langgraph
+langchain-core
+langchain-google-genai
+langchain
 textwrap3
-pydantic~=2.12.0
-python-telegram-bot>=21.0
+pydantic
+python-telegram-bot
+python-telegram-bot[job-queue]
 flask
-google-api-python-client~=2.163.0
+google-api-python-client
 google-auth-httplib2
-google-auth-oauthlib~=1.2.1
-python-json-logger~=2.0.7
-aiosqlite>=0.19.0
+google-auth-oauthlib
+python-json-logger
+aiosqlite
+pytz
+telegramify-markdown
+telegramify-markdown[mermaid]
+cryptography
