--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,35 @@
-aiofiles
-psycopg
-psycopg-pool
-python-dotenv
-google-api-client-wrapper
-langgraph
-langchain-core
-langchain-google-genai
-langchain
-textwrap3
-pydantic
-python-telegram-bot
-python-telegram-bot[job-queue]
-flask
-google-api-python-client
-google-auth-httplib2
-google-auth-oauthlib
-python-json-logger
-aiosqlite
-pytz
-telegramify-markdown
-telegramify-markdown[mermaid]
-cryptography
-werkzeug
-langgraph-checkpoint-sqlite
-waitress
-fastapi
-uvicorn[standard]
-apscheduler
-supabase
-psycopg[binary]
-langgraph-checkpoint-postgres
-asyncstdlib
+aiofiles==25.1.0
+psycopg==3.3.2
+psycopg-pool==3.3.0
+python-dotenv==1.2.1
+google-api-client-wrapper==2.0.0
+langgraph==1.0.5
+langchain-core==1.2.6
+langchain-google-genai==4.1.2
+langchain==1.2.0
+textwrap3==0.9.2
+pydantic==2.12.5
+python-telegram-bot==22.5
+python-telegram-bot[job-queue]==22.5
+flask==3.1.2
+google-api-python-client==2.187.0
+google-auth-httplib2==0.3.0
+google-auth-oauthlib==1.2.2
+python-json-logger==4.0.0
+aiosqlite==0.22.1
+pytz==2025.2
+telegramify-markdown==0.5.4
+telegramify-markdown[mermaid]==0.5.4
+cryptography==46.0.3
+werkzeug==3.1.4
+langgraph-checkpoint-sqlite==3.0.1
+waitress==3.0.2
+fastapi==0.128.0
+uvicorn[standard]==0.40.0
+apscheduler==3.11.2
+supabase==2.27.0
+psycopg[binary]==3.3.2
+langgraph-checkpoint-postgres==3.0.2
+asyncstdlib==3.13.1
+filetype==1.2.0
+redis
