--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,21 +9,14 @@ langchain-google-genai==4.1.2
 langchain==1.2.0
 textwrap3==0.9.2
 pydantic==2.12.5
-python-telegram-bot==22.5
-python-telegram-bot[job-queue]==22.5
-flask==3.1.2
 google-api-python-client==2.187.0
 google-auth-httplib2==0.3.0
 google-auth-oauthlib==1.2.2
 python-json-logger==4.0.0
 aiosqlite==0.22.1
 pytz==2025.2
-telegramify-markdown==0.5.4
-telegramify-markdown[mermaid]==0.5.4
 cryptography==46.0.3
-werkzeug==3.1.4
 langgraph-checkpoint-sqlite==3.0.1
-waitress==3.0.2
 fastapi==0.128.0
 uvicorn[standard]==0.40.0
 apscheduler==3.11.2
@@ -33,3 +26,5 @@ langgraph-checkpoint-postgres==3.0.2
 asyncstdlib==3.13.1
 filetype==1.2.0
 redis
+pytest
+httpx
