--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,4 @@
+starlette==0.50.0
 aiofiles==25.1.0
 psycopg==3.3.2
 psycopg-pool==3.3.0
@@ -25,6 +26,5 @@ psycopg[binary]==3.3.2
 langgraph-checkpoint-postgres==3.0.2
 asyncstdlib==3.13.1
 filetype==1.2.0
-redis
-pytest
-httpx
+redis==7.1.0
+httpx==0.28.1
