--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,4 @@
+protobuf
 starlette==0.50.0
 aiofiles==25.1.0
 psycopg==3.3.2
@@ -5,7 +6,7 @@ psycopg-pool==3.3.0
 python-dotenv==1.2.1
 google-api-client-wrapper==2.1.1
 langgraph==1.0.5
-langchain-core==1.2.6
+langchain-core==1.2.11
 langchain-google-genai==4.1.2
 langchain==1.2.0
 textwrap3==0.9.2
@@ -16,7 +17,7 @@ google-auth-oauthlib==1.2.2
 python-json-logger==4.0.0
 aiosqlite==0.22.1
 pytz==2025.2
-cryptography==46.0.3
+cryptography==46.0.5
 langgraph-checkpoint-sqlite==3.0.1
 fastapi==0.128.0
 uvicorn[standard]==0.40.0
@@ -28,3 +29,4 @@ asyncstdlib==3.13.1
 filetype==1.2.0
 redis==7.1.0
 httpx==0.28.1
+google-cloud-tasks==2.21.0
